--- a/template/package.json
+++ b/template/package.json
@@ -14,23 +14,29 @@
     "@react-native-async-storage/async-storage": "^1.15.14",
     "@react-native-masked-view/masked-view": "^0.2.6",
     "@react-navigation/bottom-tabs": "^6.0.9",
+    "@react-navigation/drawer": "^6.3.1",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
     "@reduxjs/toolkit": "^1.7.1",
+    "dayjs": "^1.11.0",
+    "formik": "^2.2.9",
     "i18next": "^21.6.5",
+    "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-i18next": "^11.15.3",
     "react-native": "0.66.4",
     "react-native-flipper": "^0.127.0",
     "react-native-gesture-handler": "^2.1.0",
+    "react-native-paper": "^4.11.2",
     "react-native-reanimated": "^2.3.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "redux-flipper": "^2.0.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
