--- a/template/package.json
+++ b/template/package.json
@@ -28,11 +28,13 @@
     "react-native": "0.66.4",
     "react-native-flipper": "^0.127.0",
     "react-native-gesture-handler": "^2.1.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-paper": "^4.11.2",
     "react-native-reanimated": "^2.3.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
     "react-redux": "^7.2.6",
+    "reactotron-react-native": "^5.0.1",
     "redux": "^4.1.2",
     "redux-flipper": "^2.0.1",
     "redux-persist": "^6.0.0",
