--- a/template/package.json
+++ b/template/package.json
@@ -35,6 +35,7 @@
     "react-native-screens": "^3.10.1",
     "react-redux": "^7.2.6",
     "reactotron-react-native": "^5.0.1",
+    "reactotron-redux": "^3.1.3",
     "redux": "^4.1.2",
     "redux-flipper": "^2.0.1",
     "redux-persist": "^6.0.0",
